k8s/vue/vue-clim.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-clip
spec:
  type: ClusterIP
  selector:
    component: vue
  ports:
    - port: 8080
      targetPort: 8080
      name: vue
      protocol: TCP
